syntax = "proto3";
option java_multiple_files = true;
package com.example.pointsystem.services;

message AdditionalItem {
    string last4 = 1;
    string courier = 2;
    string bankName = 3;
    string chequeNumber = 4;
    string accountNumber = 5;
}

message PaymentRequest {
  string customerId = 1;
  string price = 2;
  double priceModifier = 3;
  string paymentMethod = 4;
  string datetime = 5;
  AdditionalItem additionalItem = 6;
}

message PaymentResponse {
  string finalPrice = 1;
  int32 points = 2;
}

service PaymentService {
  rpc makePayment(PaymentRequest) returns (PaymentResponse){}
}